--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,11 +2,11 @@
 	"manifest_version": 1,
 	"id": "joplin.plugin.alondmnt.suitcase",
 	"app_min_version": "2.8",
-	"version": "1.0.0",
+	"version": "0.1.0",
 	"name": "Suitcase",
-	"description": "Change the capitalization of selected text.",
+	"description": "Change the capitalization of selected text",
 	"author": "alondmnt",
-	"homepage_url": "https://github.com/alondmnt/joplin-plugin-suitcase/#readdme",
+	"homepage_url": "https://github.com/alondmnt/joplin-plugin-suitcase/#readme",
 	"repository_url": "https://github.com/alondmnt/joplin-plugin-suitcase",
 	"keywords": [],
 	"categories": []
