--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,10 +2,10 @@
 	"manifest_version": 1,
 	"id": "joplin.plugin.alondmnt.suitcase",
 	"app_min_version": "2.8",
-	"version": "0.2.1",
+	"version": "0.2.2",
 	"name": "Suitcase",
 	"description": "Change the capitalization of selected text",
-	"author": "alondmnt",
+	"author": "Alon Diament",
 	"homepage_url": "https://github.com/alondmnt/joplin-plugin-suitcase/#readme",
 	"repository_url": "https://github.com/alondmnt/joplin-plugin-suitcase",
 	"keywords": [],
