--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,9 +2,9 @@
 	"manifest_version": 1,
 	"id": "joplin.plugin.alondmnt.suitcase",
 	"app_min_version": "2.8",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"name": "Suitcase",
-	"description": "Change the capitalization of selected text",
+	"description": "Change the capitalization of selected text, and case-insensitive sorting",
 	"author": "Alon Diament",
 	"homepage_url": "https://github.com/alondmnt/joplin-plugin-suitcase/#readme",
 	"repository_url": "https://github.com/alondmnt/joplin-plugin-suitcase",
