--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,6 +2,7 @@
 	"manifest_version": 1,
 	"id": "joplin.plugin.alondmnt.suitcase",
 	"app_min_version": "2.8",
+	"platforms": ["desktop", "mobile"],
 	"version": "0.3.3",
 	"name": "Suitcase",
 	"description": "Change the capitalization of selected text, and case-insensitive sorting",
