--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "publish"
   ],
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@types/node": "^14.0.14",
+    "babel-loader": "^8.3.0",
     "chalk": "^4.1.0",
     "copy-webpack-plugin": "^6.1.0",
     "fs-extra": "^9.0.1",
